2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(validateInvalidComponents): Fixed condition to avoid NPE.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JViewport.java:
	(static_initializer): Removed unused variable myScrollMode.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java:
	Cleared API docs a little.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/util/StringTokenizer.java
	(StringTokenizer(String, String, boolean)):
	Don't trigger NPE here for conformance with the spec.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/util/ArrayList.java
	(DEFAULT_CAPACITY): Changed default capacity to 10, as specified.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java
	(GdkGraphics2D(GdkGraphics2D)): Added null check for the bg
	field to avoid NPE.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-net/javanet.c
	(_javanet_shutdownOutput): Replaced strerror() with
	TARGET_NATIVE_LAST_ERROR_STRING() for portability.
	(_javanet_shutdownInput): Replaced strerror() with
	TARGET_NATIVE_LAST_ERROR_STRING() for portability.

2006-01-10  Robert Schuster  <robertschuster@fsfe.org>

	* java/beans/EventSetDescriptor.java: Reformatted and
	fixed API docs.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/lang/SecurityManager.java
	Fully qualified AWT class references in API docs.

2006-01-10  Robert Schuster  <robertschuster@fsfe.org>

        * java/beans/EventSetDescriptor.java:
        (getGetListenerMethod): New method.

2006-01-10  Mark Wielaard  <mark@klomp.org>

	* lib/Makefile.am (GCJX): Add -g to get linenumber info.

2006-01-10  Jeroen Frijters  <jeroen@frijters.net>

	PR classpath/25727
	* java/util/Hashtable.java
	(contains): Call equals on existing value.
	(containsKey, get, put, remove): Call equals on existing key.
	(getEntry): Call equals on existing entry.

2006-01-10  Jeroen Frijters  <jeroen@frijters.net>
